<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/timer_10min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/timer_10min"
        android:textColor="@color/text_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer_20min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/timer_20min"
        android:textColor="@color/text_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer_30min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/timer_30min"
        android:textColor="@color/text_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer_1hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/timer_1hour"
        android:textColor="@color/text_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer_2hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/timer_2hour"
        android:textColor="@color/text_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timer_unlimited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/timer_unlimited"
        android:textColor="@color/text_primary"
        android:textSize="18sp" />

</LinearLayout>
